cabal-version: 2.4

name: aasam
version: 0.1.0.0

-- A short (one-line) description of the package.
synopsis: Convert distfix precedence grammars to unambiguous context-free grammars.

description: This project is a fully-extended implementation of the algorithm ℳ from Annika Aasa's "Precedences in specifications and implementations of programming languages". It provides an interface for converting distfix (mixfix) precedence grammars into unambiguous context-free grammars.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports: https://gitlab.com/mobotsar/aasam

author: Alexander Lucas
maintainer: mobotsar@protonmail.com

extra-source-files: README.md

-- The license under which the package is released.
license: Apache-2.0

-- The file containing the license text.
license-file: LICENSE

category: parsing

library
    exposed-modules: Aasam,
                     Grammars

    -- Modules included in this library but not exported.
    other-modules: Util

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends: base ^>=4.15.1.0,
                   containers

    hs-source-dirs: lib
    default-language: Haskell2010

test-suite aasam-test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: AasamTest.hs
    build-depends: base ^>=4.15.1.0,
                   HUnit,
                   test-framework,
                   test-framework-hunit,
                   containers,
                   aasam
